# can-it-wfc

./: .gitignore  LICENSE  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  delete_test_user.py  fly.toml  manual_test_optimization_simple.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_usersettings.py  0003_add_social_features.py  0004_drop_unused_tables.py  0005_add_email_index.py
backend/apps/activity/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/activity/migrations/: 0001_create_activity_model.py  0002_alter_activity_activity_type.py
backend/apps/activity/tests/: test_models.py  test_services.py
backend/apps/cafes/: admin.py  manual_test_nearby_optimization.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/cafes/migrations/: 0001_initial.py  0002_cafeflag.py  0003_add_postgis_location_field.py  0004_add_cache_fields.py  0005_remove_postgis_field.py  0006_add_google_rating_fields.py  0007_add_is_closed_index.py  0008_add_favorite_composite_index.py
backend/apps/core/: constants.py  currency_utils.py
backend/apps/reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/core/: authentication.py  exception_handlers.py  exceptions.py  middleware.py  permissions.py
frontend/: .env.example  (+5 more)
(+160 files in other folders)
